--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    implementation 'com.github.magic-goop:tag-sphere:1.0.0'
 
 }
