--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lovehp30.mirrorcontrol" >
+    package="com.lovehp30.mirrorcontrol">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,11 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar" >
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".DataActivity"></activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_main2">
-        </activity>
+            android:label="@string/title_activity_main2"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -24,19 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity-->
-<!--            android:name=".MainActivity"-->
-<!--            android:label="@string/title_activity_main2">-->
-<!--        </activity>-->
-<!--        <activity-->
-<!--            android:name=".LoginActivity"-->
-<!--            android:label="@string/app_name">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
     </application>
 
 </manifest>
