--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,7 @@ dependencies {
 
 
     implementation 'com.android.volley:volley:1.1.0'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
     implementation 'com.github.magic-goop:tag-sphere:1.0.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 
 }
