--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
 
+<!--        <activity-->
+<!--        android:name=".LoginActivity"-->
+<!--            android:label="@string/app_name">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+<!--        <activity android:name=".MainActivity"></activity>-->
+<!--        <activity android:name=".DataActivity"></activity>-->
+
         <activity
-        android:name=".LoginActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,8 +33,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
         <activity android:name=".DataActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+
     </application>
 
 </manifest>
