--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DataActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".DataAct.DataActivity"></activity>
+        <activity android:name=".Login.LoginActivity"></activity>
 
     </application>
 
