--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:1.4.0'
 
+    implementation 'com.github.mohammadatif:Animatoo:master'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.magic-goop:tag-sphere:1.0.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+
 
 
 }
