--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.afollestad.material-dialogs:input:3.3.0'
-    implementation 'com.android.volley:volley:1.1.0'
+
+    implementation 'com.github.mohammadatif:Animatoo:master'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.magic-goop:tag-sphere:1.0.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    compile 'com.wrapp.floatlabelededittext:library:0.0.6'
+
 
 }
